fixed some layout issues after reverting to earlier version

--- a/output.css
+++ b/output.css
@@ -200,6 +200,9 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
+  .-top-1 {
+    top: calc(var(--spacing) * -1);
+  }
   .-top-4 {
     top: calc(var(--spacing) * -4);
   }
@@ -299,9 +302,6 @@
   .my-8 {
     margin-block: calc(var(--spacing) * 8);
   }
-  .my-auto {
-    margin-block: auto;
-  }
   .-mt-8 {
     margin-top: calc(var(--spacing) * -8);
   }
@@ -343,12 +343,6 @@
   }
   .-ml-1 {
     margin-left: calc(var(--spacing) * -1);
-  }
-  .-ml-8 {
-    margin-left: calc(var(--spacing) * -8);
-  }
-  .-ml-16 {
-    margin-left: calc(var(--spacing) * -16);
   }
   .-ml-24 {
     margin-left: calc(var(--spacing) * -24);
@@ -404,9 +398,6 @@
   .h-\[200px\] {
     height: 200px;
   }
-  .h-\[250px\] {
-    height: 250px;
-  }
   .h-\[300px\] {
     height: 300px;
   }
@@ -415,9 +406,6 @@
   }
   .h-\[400px\] {
     height: 400px;
-  }
-  .h-\[500px\] {
-    height: 500px;
   }
   .h-full {
     height: 100%;
@@ -582,6 +570,9 @@
   .pb-8 {
     padding-bottom: calc(var(--spacing) * 8);
   }
+  .pb-\[300px\] {
+    padding-bottom: 300px;
+  }
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
   }
@@ -590,9 +581,6 @@
   }
   .text-center {
     text-align: center;
-  }
-  .text-left {
-    text-align: left;
   }
   .text-right {
     text-align: right;
@@ -817,6 +805,11 @@
       display: inline;
     }
   }
+  .lg\:h-\[50px\] {
+    @media (width >= 64rem) {
+      height: 50px;
+    }
+  }
   .lg\:h-\[90vh\] {
     @media (width >= 64rem) {
       height: 90vh;
@@ -842,9 +835,19 @@
       height: 250px;
     }
   }
+  .lg\:h-\[275px\] {
+    @media (width >= 64rem) {
+      height: 275px;
+    }
+  }
   .lg\:h-\[300px\] {
     @media (width >= 64rem) {
       height: 300px;
+    }
+  }
+  .lg\:h-\[325px\] {
+    @media (width >= 64rem) {
+      height: 325px;
     }
   }
   .lg\:h-\[350px\] {
@@ -1033,6 +1036,16 @@
       display: grid;
     }
   }
+  .xl\:h-\[300px\] {
+    @media (width >= 80rem) {
+      height: 300px;
+    }
+  }
+  .xl\:h-\[350px\] {
+    @media (width >= 80rem) {
+      height: 350px;
+    }
+  }
   .xl\:h-full {
     @media (width >= 80rem) {
       height: 100%;
@@ -1127,6 +1140,16 @@
   .\32 xl\:left-30 {
     @media (width >= 96rem) {
       left: calc(var(--spacing) * 30);
+    }
+  }
+  .\32 xl\:h-\[300px\] {
+    @media (width >= 96rem) {
+      height: 300px;
+    }
+  }
+  .\32 xl\:h-\[325px\] {
+    @media (width >= 96rem) {
+      height: 325px;
     }
   }
   .\32 xl\:h-\[350px\] {
